# rest_countries

./: .env  .env.template  .gitignore  Dockerfile  README.md  django_run.sh  docker-compose.yml  pyproject.toml
rest_countries/core/: models.py  urls.py  utils.py  views.py
rest_countries/core/api/: serializers.py  views.py
rest_countries/core/management/commands/: fetch_countries.py
rest_countries/core/migrations/: 0001_initial.py
rest_countries/core/templates/: base.html
rest_countries/core/templates/core/: detail.html  list.html  pagination.html
rest_countries/core/templates/registration/: login.html  register.html
rest_countries/rest_countries/: asgi.py  settings.py  urls.py  wsgi.py
